--- a/NScript/packages.config
+++ b/NScript/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BuildTools.FxCop" version="1.0.1" targetFramework="net40" />
   <package id="ConfuserEx" version="0.6.0" targetFramework="net45" />
+  <package id="DllExport" version="1.7.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.8" targetFramework="net40" developmentDependency="true" />
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.8" targetFramework="net40" developmentDependency="true" />
