--- a/NScript窗体设计器/NScript窗体设计器.vbproj
+++ b/NScript窗体设计器/NScript窗体设计器.vbproj
@@ -87,6 +87,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventHandlerEdit.Designer.vb">
+      <DependentUpon>EventHandlerEdit.vb</DependentUpon>
+    </Compile>
+    <Compile Include="EventHandlerEdit.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -111,6 +117,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="EventHandlerEdit.resx">
+      <DependentUpon>EventHandlerEdit.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
@@ -134,17 +143,17 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NScript\NScript.vbproj">
-      <Project>{337024e4-d456-41cb-bbb4-a7a677f32337}</Project>
-      <Name>NScript</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
       <Visible>False</Visible>
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NScript2\NScript2.vbproj">
+      <Project>{35326efa-fc7f-48c6-94f9-4e819f0488b2}</Project>
+      <Name>NScript2</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
