添加乱码修复

--- a/NScript2/NScript2.vbproj
+++ b/NScript2/NScript2.vbproj
@@ -103,6 +103,7 @@
     <Compile Include="Nscript\Formxml\FormDataControl.vb" />
     <Compile Include="Nscript\Formxml\FormDataLabel.vb" />
     <Compile Include="Nscript\Formxml\FormDataTextBox.vb" />
+    <Compile Include="Nscript\Text\UTFTextDeEncoding.vb" />
     <Compile Include="Nscript\Zip\GZip.vb" />
     <Compile Include="Nscript\NetScript.vb" />
     <Compile Include="Nscript\NSConsole.vb" />
