--- a/NScript2/packages.config
+++ b/NScript2/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DllExport" version="1.7.0" targetFramework="net45" />
+  <package id="NAudio" version="1.10.0" targetFramework="net45" />
   <package id="QrCode.Net" version="0.4.0.0" targetFramework="net452" />
 </packages>
