修改图片绘制

--- a/NScript2/NScript2.vbproj
+++ b/NScript2/NScript2.vbproj
@@ -81,6 +81,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Nscript\Drawing\CBitmap.vb" />
     <Compile Include="Nscript\Drawing\Rect.vb" />
     <Compile Include="Nscript\Drawing\CPoint.vb" />
     <Compile Include="Nscript\Eventargs\Eventargs.vb" />
